--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,15 @@
   </head>
   <body>
     <div class="container home-first-page">
+      <div class="row menu">
+        <ul class="text-center">
+          <li>ABOUT</li><span class="delimiter-slash">/</span>
+          <li>GURBANI VICHAR</li><span class="delimiter-slash">/</span>
+          <li>SAMAGAMS</li><span class="delimiter-slash">/</span>
+          <li>DOWNLOADS</li><span class="delimiter-slash">/</span>
+          <li>CONTACT</li>
+        </ul>
+      </div>
       <div class="row title text-center">
         <h2 class="upper-title">GURDWARA SAHIB</h2>
         <h2 class="lower-title">BRAHM BUNGA, DODRA</h2>
@@ -31,19 +40,23 @@
           </span>
         </div>
         <div class="col-md-4">
+          <div id="dodra-radio"></div>
         </div>
         <div class="col-md-4 upcoming-samagams">
-          <div>30 May - 6 June</div>
+          <div id="upcoming-samagams"></div>
+          <ul id="samagams">
+            <li class="samagam">
+              G. Sahib Brahm Bunga, Doraha, 4KM from Doraha on Gill Canal, Punjab.
+              <br>
+              <span class="dates">11-12 April, 2015</span>
+            </li>
+            <li class="samagam">
+              G. Sri Guru Singh Sabha, Sainik Colony, Jalandhar, Punjab.
+              <br>
+              <span class="dates">20-21 April, 2015</span>
+            </li>
+          </ul>
         </div>
-      </div>
-      <div class="row menu">
-        <ul>
-          <li>ABOUT</li><span class="delimiter-slash">/</span>
-          <li>GURBANI VICHAR</li><span class="delimiter-slash">/</span>
-          <li>SAMAGAMS</li><span class="delimiter-slash">/</span>
-          <li>DOWNLOADS</li><span class="delimiter-slash">/</span>
-          <li>CONTACT</li>
-        </ul>
       </div>
     </div>
     <div class="container home-second-page">
