integrate menu and scrollspy

--- a/homepage.html
+++ b/homepage.html
@@ -1,81 +1,178 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Brahm Bunga Dodra</title>
-    <link rel="stylesheet" type="text/css" href="./assets/stylesheet/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="./assets/stylesheet/homepage.css">
-  </head>
-  <body>
-    <div class="container home-first-page">
-      <div class="row menu">
-        <ul class="text-center">
-          <li>ABOUT</li><span class="delimiter-slash">/</span>
-          <li>GURBANI VICHAR</li><span class="delimiter-slash">/</span>
-          <li>SAMAGAMS</li><span class="delimiter-slash">/</span>
-          <li>DOWNLOADS</li><span class="delimiter-slash">/</span>
-          <li>CONTACT</li>
+<head>
+  <title>Brahm Bunga Dodra</title>
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheet/bootstrap.css">
+  <script type="text/javascript" src="./assets/javascript/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="./assets/javascript/bootstrap.js"></script>
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheet/homepage.css">
+</head>
+<body data-spy="scroll" data-target="#navbar-example" data-offset="100">
+  <div class="container home-first-page">
+    <div class="row title text-center">
+      <h2 class="upper-title">GURDWARA SAHIB</h2>
+      <h2 class="lower-title">BRAHM BUNGA, DODRA</h2>
+    </div>
+    <div class="row carousel">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="/Users/JaspreetSingh/Desktop/416.jpg" style="width: 100%">
+              <div class="carousel-caption">
+                ...
+              </div>
+            </div>
+            <div class="item">
+              <img src="./DodraWeb_About.jpg" style="width: 100%">
+              <div class="carousel-caption">
+                ...
+              </div>
+            </div>
+            <div class="item">
+              <img src="/Users/JaspreetSingh/Desktop/416.jpg" style="width: 100%">
+              <div class="carousel-caption">
+                ...
+              </div>
+            </div>
+          </div>
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <br>
+    <div class="row upcoming">
+      <div class="col-md-4 introduction general-text">
+        <div class="general-title">
+          <strong>Jee Aya Nu!</strong>
+        </div>
+        <span>
+          Welcome to the official website of Brahm Bunga Dodra.
+          <br />
+          Come immerse yourself in the blissful congregation praticing Naam, and swim in the blissful ocean of Nanak Love! Some more can be said about Dodra here, as well as what all website offers. This is dummy text, like lorem ipsum and the like.
+        </span>
+      </div>
+      <div class="col-md-4">
+        <div id="dodra-radio"></div>
+      </div>
+      <div class="col-md-4 upcoming-samagams">
+        <div id="upcoming-samagams"></div>
+        <ul id="samagams">
+          <li class="samagam">
+            G. Sahib Brahm Bunga, Doraha, 4KM from Doraha on Gill Canal, Punjab.
+            <br>
+            <span class="dates">11-12 April, 2015</span>
+          </li>
+          <li class="samagam">
+            G. Sri Guru Singh Sabha, Sainik Colony, Jalandhar, Punjab.
+            <br>
+            <span class="dates">20-21 April, 2015</span>
+          </li>
         </ul>
       </div>
-      <div class="row title text-center">
-        <h2 class="upper-title">GURDWARA SAHIB</h2>
-        <h2 class="lower-title">BRAHM BUNGA, DODRA</h2>
-      </div>
-      <div class="row carousel">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <img src="/Users/JaspreetSingh/Desktop/416.jpg" style="width: 100%">
+    </div>
+    <div class="row">
+      <nav id="navbar-example" class="navbar navbar-default navbar-static" role="navigation">
+        <div class="navbar-header">
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-js-navbar-scrollspy">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">BBD</a>
         </div>
-        <div class="col-md-2"></div>
-      </div>
-      <br>
-      <div class="row upcoming">
-        <div class="col-md-4 introduction general-text">
-          <div class="general-title">
-            <strong>Jee Aya Nu!</strong>
-          </div>
-          <span>
-            Welcome to the official website of Brahm Bunga Dodra.
-            <br />
-            Come immerse yourself in the blissful congregation praticing Naam, and swim in the blissful ocean of Nanak Love! Some more can be said about Dodra here, as well as what all website offers. This is dummy text, like lorem ipsum and the like.
-          </span>
-        </div>
-        <div class="col-md-4">
-          <div id="dodra-radio"></div>
-        </div>
-        <div class="col-md-4 upcoming-samagams">
-          <div id="upcoming-samagams"></div>
-          <ul id="samagams">
-            <li class="samagam">
-              G. Sahib Brahm Bunga, Doraha, 4KM from Doraha on Gill Canal, Punjab.
-              <br>
-              <span class="dates">11-12 April, 2015</span>
-            </li>
-            <li class="samagam">
-              G. Sri Guru Singh Sabha, Sainik Colony, Jalandhar, Punjab.
-              <br>
-              <span class="dates">20-21 April, 2015</span>
-            </li>
+        <div class="collapse navbar-collapse bs-js-navbar-scrollspy">
+          <ul class="nav navbar-nav text-center">
+            <li><a href="#home-second-page">ABOUT</a></li>
+            <li><a>GURBANI VICHAR</a></li>
+            <li><a>SAMAGAMS</a></li>
+            <li><a>DOWNLOADS</a></li>
+            <li><a>CONTACT</a></li>
           </ul>
         </div>
-      </div>
+      </nav>
     </div>
-    <div class="container home-second-page">
-      <br>
-      <br>
-      <div class="row text-center">
-        <h2 class="lower-title about-dodra">ABOUT DODRA</h2>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          Come immerse yourself in the blissful congregation praticing Naam, and swim in the blissful ocean of Nanak Love! Some more can be said about Dodra here, as well as what all website offers. This is dummy text, like lorem ipsum and the like.
+</div>
+<div class="container home-second-page" id="home-second-page">
+  <br>
+  <br>
+  <div class="row text-center">
+    <h2 class="lower-title about-dodra">ABOUT DODRA</h2>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      Come immerse yourself in the blissful congregation praticing Naam, and swim in the blissful ocean of Nanak Love! Some more can be said about Dodra here, as well as what all website offers. This is dummy text, like lorem ipsum and the like.
+    </div>
+    <div class="col-md-4">
+      Come immerse yourself in the blissful congregation praticing Naam, and swim in the blissful ocean of Nanak Love! Some more can be said about Dodra here, as well as what all website offers. This is dummy text, like lorem ipsum and the like.
+    </div>
+    <div class="col-md-4">
+      Come immerse yourself in the blissful congregation praticing Naam, and swim in the blissful ocean of Nanak Love! Some more can be said about Dodra here, as well as what all website offers. This is dummy text, like lorem ipsum and the like.
+    </div>
+  </div>
+  <div class="row carousel">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <div id="carousel-example-generic2" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic2" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic2" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic2" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="/Users/JaspreetSingh/Desktop/416.jpg" style="width: 100%">
+            <div class="carousel-caption">
+              ...
+            </div>
+          </div>
+          <div class="item">
+            <img src="./DodraWeb_About.jpg" style="width: 100%">
+            <div class="carousel-caption">
+              ...
+            </div>
+          </div>
+          <div class="item">
+            <img src="/Users/JaspreetSingh/Desktop/416.jpg" style="width: 100%">
+            <div class="carousel-caption">
+              ...
+            </div>
+          </div>
         </div>
-        <div class="col-md-4">
-          Come immerse yourself in the blissful congregation praticing Naam, and swim in the blissful ocean of Nanak Love! Some more can be said about Dodra here, as well as what all website offers. This is dummy text, like lorem ipsum and the like.
-        </div>
-        <div class="col-md-4">
-          Come immerse yourself in the blissful congregation praticing Naam, and swim in the blissful ocean of Nanak Love! Some more can be said about Dodra here, as well as what all website offers. This is dummy text, like lorem ipsum and the like.
-        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic2" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic2" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
   </body>
-</html>
+  </html>
